# jj-starship

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  error.rs  git.rs  main.rs  output.rs
