[package]
name = "jj-starship"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Unified Git/JJ Starship prompt module"
license = "MIT"

[[bin]]
name = "jj-starship"
path = "src/main.rs"

[features]
default = ["git", "jj"]
git = ["dep:git2"]
jj = ["dep:jj-lib"]

[dependencies]
# JJ integration
jj-lib = { version = "0.36", optional = true }

# Git integration
git2 = { version = "0.19", default-features = false, optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
thiserror = "2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
